# clckwrks-cli

./: .travis.yml  Main.hs  README.md  clckwrks-cli.cabal  default.nix  shell.nix
.github/workflows/: haskell-ci.yml
Clckwrks/CLI/: Core.hs  ProfileData.hs
