Name:                clckwrks-cli
Version:             0.1.4
Synopsis:            a command-line interface for adminstrating some aspects of clckwrks
-- Description:
Homepage:            http://www.clckwrks.com/
License:             BSD3
License-file:        LICENSE
Author:              Jeremy Shaw
Maintainer:          jeremy@n-heptane.com
Copyright:           2012 SeeReason Partners LLC
Category:            Clckwrks
Build-type:          Custom
Cabal-version:       >=1.2

Executable clckwrks-cli
  Main-is:
     Main.hs

  Build-depends:
     acid-state == 0.7.*,
     base        < 5,
     clckwrks   == 0.12.*,
     network    >= 2.3 && < 2.5
